--- a/deploy/env.example
+++ b/deploy/env.example
@@ -4,9 +4,25 @@
 # 
 # 注意：.env 文件会被 git 忽略，不会提交到版本库
 
+# ==================== 站点1配置 ====================
 # 端口配置
 APP_PORT=5861
 
+# 站点配置
+SITE_SUBTITLE=倒计时
+SITE_TAGLINE=点亮希望，照亮未来
+SITE_YEAR=2026
+
+# ==================== 站点2配置（XLIGHT站点）====================
+# 端口配置
+APP_PORT_XLIGHT=5862
+
+# 站点配置
+SITE_SUBTITLE_XLIGHT=XLIGHT 前路有光
+SITE_TAGLINE_XLIGHT=点亮希望，照亮未来
+SITE_YEAR_XLIGHT=2026
+
+# ==================== 通用配置 ====================
 # Docker配置
 CONTAINER_PORT=80
 
