Update deployment configurations by refining .dockerignore to retain essential entrypoint script and include additional deployment files. Modify env.example to change site subtitle to "倒计时网站" for better alignment with project branding in the 2026 New Year Countdown project.

--- a/.dockerignore
+++ b/.dockerignore
@@ -26,7 +26,13 @@ Thumbs.db
 README.md
 DESIGN.md
 
-# 部署文件本身
+# 部署文件本身（但保留 entrypoint.sh，容器启动需要）
 deploy/*.sh
+!deploy/entrypoint.sh
+deploy/docker-compose.yml
+deploy/app.conf
+deploy/env.example
+deploy/README.md
+deploy/DEPLOY_GUIDE.md
 docker-compose.yml
 Dockerfile
