--- a/deploy/env.example
+++ b/deploy/env.example
@@ -18,7 +18,7 @@ SITE_YEAR=2026
 APP_PORT_XLIGHT=5862
 
 # 站点配置
-SITE_SUBTITLE_XLIGHT=XLIGHT 前路有光
+SITE_SUBTITLE_XLIGHT=倒计时网站
 SITE_TAGLINE_XLIGHT=点亮希望，照亮未来
 SITE_YEAR_XLIGHT=2026
 
