Remove deprecated app configuration file and update deployment scripts for improved environment variable handling. Change image tag to 'latest' for better version management and modify site subtitle for consistency with project branding in the 2026 New Year Countdown project.

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     restart: unless-stopped
     environment:
     - TZ=${TZ:-Asia/Shanghai}
-    - SITE_SUBTITLE=${SITE_SUBTITLE_XLIGHT:-XLIGHT 前路有光}
+    - SITE_SUBTITLE=${SITE_SUBTITLE_XLIGHT:-倒计时网站}
     - SITE_TAGLINE=${SITE_TAGLINE_XLIGHT:-点亮希望，照亮未来}
     - SITE_YEAR=${SITE_YEAR_XLIGHT:-2026}
     labels:
