--- a/deploy/env.example
+++ b/deploy/env.example
@@ -8,7 +8,7 @@
 # 端口配置
 APP_PORT=5861
 
-# 站点配置
+# 站点配置（值包含空格时不需要引号，脚本会自动处理）
 SITE_SUBTITLE=倒计时
 SITE_TAGLINE=点亮希望，照亮未来
 SITE_YEAR=2026
@@ -17,7 +17,7 @@ SITE_YEAR=2026
 # 端口配置
 APP_PORT_XLIGHT=5862
 
-# 站点配置
+# 站点配置（值包含空格时不需要引号，脚本会自动处理）
 SITE_SUBTITLE_XLIGHT=倒计时网站
 SITE_TAGLINE_XLIGHT=点亮希望，照亮未来
 SITE_YEAR_XLIGHT=2026
