--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: unless-stopped
     environment:
     - TZ=${TZ:-Asia/Shanghai}
-    - SITE_SUBTITLE=${SITE_SUBTITLE:-倒计时}
+    - SITE_SUBTITLE=${SITE_SUBTITLE:-倒计时网站}
     - SITE_TAGLINE=${SITE_TAGLINE:-点亮希望，照亮未来}
     - SITE_YEAR=${SITE_YEAR:-2026}
     labels:
@@ -30,7 +30,7 @@ services:
     restart: unless-stopped
     environment:
     - TZ=${TZ:-Asia/Shanghai}
-    - SITE_SUBTITLE=${SITE_SUBTITLE_XLIGHT:-倒计时网站}
+    - SITE_SUBTITLE=${SITE_SUBTITLE_XLIGHT:-XLIGHT前路有光}
     - SITE_TAGLINE=${SITE_TAGLINE_XLIGHT:-点亮希望，照亮未来}
     - SITE_YEAR=${SITE_YEAR_XLIGHT:-2026}
     labels:
